2002-12-16  Pavel Roskin  <proski@gnu.org>

	* editcmd.c (edit_goto_cmd): Add support for negative line
	numbers, which are counted from the last line.  Use strtol(), so
	hex numbers are supported as well.

	* edit.c: Use edit->stack_disable instead of static variable.

2002-12-15  Pavel Roskin  <proski@gnu.org>

	* edit.c (check_file_access): Use non-blocking open() followed
	by fstat() to avoid race conditions.  Don't ask users to
	recompile the editor.

	* edit.c (edit_reload): Don't initialize edit->macro_i, because
	edit_init() takes care of it.
	* editwidget.c (edit): Likewise.

	* edit.h: Don't inclide malloc.h.  Use g_malloc() and g_free()
	instead.  Adjust all dependencies.

	* edit.c (edit_load_file): Merge edit_open_file().  Disable fast
	loading on non-local VFS because the file size can be wrong.
	(init_dynamic_edit_buffers): Split into edit_init_buffers() and
	edit_load_file_fast().

	* edit.c (edit_init): Move file loading to ...
	(edit_load_file): ... a separate function.

	* edit.c (init_dynamic_edit_buffers): Remove unused code to
	support loading text from buffer.

2002-12-14  Pavel Roskin  <proski@gnu.org>

	* editcmd.c (edit_split_filename): Rename to edit_set_filename,
	use g_malloc() and g_free() on edit->filename.

2002-12-08  Pavel Roskin  <proski@gnu.org>

	* edit.c (edit_open_file): Remove "text" and "text_size"
	arguments.  Adjust all callers.

	* edit.c (edit_move_to_column): Remove, use
	edit_move_to_prev_col() instead.

	* edit.c: Commit the rest of the position saving code.
	(edit_load_position): New function, load position.
	(edit_save_position): New function, save position.
	(edit_init): Take new argument "line".  If it's 0, load position
	from .mc/filepos.
	(edit_clean): Save file position to .mc/filepos even if the file
	is not being saved.
	* editwidget.c (edit): Don't set the initial line, pass it to
	edit_init().

2002-12-07  Pavel Roskin  <proski@gnu.org>

	* syntax.c (edit_load_syntax): Reuse more informative error
	message.